--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "animejs": "^3.2.1",
         "bootstrap": "^5.3.0-alpha1"
     }
 }
