--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "brackets/admin-translations": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.14",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5"
+        "larswiegers/laravel-translations-checker": "^0.4.0",
+        "livewire/livewire": "^2.5",
+        "spatie/laravel-translation-loader": "^2.7",
+        "vemcogroup/laravel-translation": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
