--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "brackets/admin-translations": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.14",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5",
+        "leicaflorian/pimp_my_crud": "dev-main",
+        "livewire/livewire": "^2.12",
         "spatie/laravel-translation-loader": "^2.7",
         "vemcogroup/laravel-translation": "^3.0"
     },
@@ -66,5 +66,14 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../Projects/pimp-my-crud",
+            "options": {
+                "symlink": false
+            }
+        }
+    ]
 }
