--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "animate.css": "^4.1.1",
         "animejs": "^3.2.1",
-        "bootstrap": "^5.3.0-alpha1"
+        "bootstrap": "^5.3.0-alpha1",
+        "tinymce": "^6.3.2"
     }
 }
