--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "leicaflorian/pimp_my_crud": "^1.0",
         "livewire/livewire": "^2.12",
+        "spatie/laravel-sitemap": "^6.2",
         "spatie/laravel-translation-loader": "^2.7",
         "vemcogroup/laravel-translation": "^3.0"
     },
