Fixes admin compilation

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "dev:admin": "vite -c vite.admin.config.js",
+        "build": "vite build",
+        "build:admin": "vite build -c vite.admin.config.js"
     },
     "devDependencies": {
         "@alpinejs/focus": "^3.10.5",
