--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "dev:admin": "vite -c vite.admin.config.js",
-        "build": "vite build",
-        "build:admin": "vite build -c vite.admin.config.js"
+        "build": "vite build"
     },
     "devDependencies": {
         "@alpinejs/focus": "^3.10.5",
